Added ApiGateway service, added some features in other services